# libuuid-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake  uuid-config.cmake.in  uuid.pc.in
.github/workflows/: test.yml
patches/: patch_2.40.diff
